made some changes

--- a/index.html
+++ b/index.html
@@ -106,12 +106,12 @@
             </section>
 
             <footer>
-                <div class="footer_widget">
+                <!-- <div class="footer_widget ">
                     <p id="cta_text">
                         <b>Have a project in mind? We would love to hear from you!</b> 
                      </p>
                      <a id="cta_link" href="">GET IN TOUCH WITH US</a>
-                </div>
+                </div> -->
                 <div class="item1">
                     <h3>Location</h3>
                     <p><i class="fa fa-map-marker" style="font-size: larger;"></i> RIT College,<br>
