made some changes

--- a/index.html
+++ b/index.html
@@ -106,47 +106,46 @@
             </section>
 
             <footer>
-                <!-- <div class="footer_widget ">
-                    <p id="cta_text">
+                <div class="footer_widget ">
+                    <!-- <p id="cta_text">
                         <b>Have a project in mind? We would love to hear from you!</b> 
                      </p>
-                     <a id="cta_link" href="">GET IN TOUCH WITH US</a>
-                </div> -->
-                <div class="item1">
-                    <h3>Location</h3>
-                    <p><i class="fa fa-map-marker" style="font-size: larger;"></i> RIT College,<br>
-                    Islampur, Maharashtra, India <br>
-                    zipcode:555682</p>
-                    <p><i class="fa fa-phone" style="font-size: larger;"></i> 9767027823</p><br>
-                    <a href="#"><i class="fa fa-dribbble"></i></a> 
-                    <a href="#"><i class="fa fa-twitter"></i></a>  
-                    <a href="#"><i class="fa fa-linkedin"></i></a>  
-                    <a href="#"><i class="fa fa-facebook"></i></a> 
+                     <a id="cta_link" href="">GET IN TOUCH WITH US</a> -->
+                    <div class="grid-item">
+                        <h3>Location</h3>
+                        <p><i class="fa fa-map-marker" style="font-size: larger;"></i> RIT College,<br>
+                        Islampur, Maharashtra, India <br>
+                        zipcode:555682</p>
+                        <p><i class="fa fa-phone" style="font-size: larger;"></i> 9767027823</p><br>
+                        <a href="#"><i class="fa fa-dribbble"></i></a> 
+                        <a href="#"><i class="fa fa-twitter"></i></a>  
+                        <a href="#"><i class="fa fa-linkedin"></i></a>  
+                        <a href="#"><i class="fa fa-facebook"></i></a> 
+                    </div>
+                    <div class="grid-item">
+                        <h3>Compony</h3>
+                        <ul id="comp_list">
+                            <li id="comp_item_1"><a href="">Our Story</a></li>
+                            <li id="comp_item_2"><a href="">Mission</a></li>
+                            <li id="comp_item_3"><a href="">Journal</a></li>
+                            <li id="comp_item_4"><a href="">Careers</a></li>
+                        </ul>
+                    </div>
+                    <div class="grid-item">
+                        <h3>Support</h3>
+                        <ul id="sup_list">
+                            <li id="sup_item_1"><a href="">FAQ</a></li>
+                            <li id="sup_item_2"><a href="">Contact Us</a></li>
+                            <li id="sup_item_3"><a href="">Policies</a></li>
+                        </ul>
+                    </div>
+                    <div class="grid-item">
+                        <h3>ARK Studio</h3>
+                        <p>
+                            dfadsfas ga sfads gfa fas fa gr gagarg asgref agagreg rga gr ag gr ege rgr ds
+                        </p>
+                    </div>
                 </div>
-                <div class="item2">
-                    <h3>Compony</h3>
-                    <ul id="comp_list">
-                        <li id="comp_item_1"><a href="">Our Story</a></li>
-                        <li id="comp_item_2"><a href="">Mission</a></li>
-                        <li id="comp_item_3"><a href="">Journal</a></li>
-                        <li id="comp_item_4"><a href="">Careers</a></li>
-                    </ul>
-                </div>
-                <div class="item3">
-                    <h3>Support</h3>
-                    <ul id="sup_list">
-                        <li id="sup_item_1"><a href="">FAQ</a></li>
-                        <li id="sup_item_2"><a href="">Contact Us</a></li>
-                        <li id="sup_item_3"><a href="">Policies</a></li>
-                    </ul>
-                </div>
-                <div class="item4">
-                    <h3>ARK Studio</h3>
-                    <p>
-                        dfadsfas ga sfads gfa fas fa gr gagarg asgref agagreg rga gr ag gr ege rgr ds
-                    </p>
-                </div>
-                
                 <p class="rights">2014 ARK Studio - All Rights Reserved</p>
             </footer>     
     </body>
